# irys

./: .gitignore  Cargo.toml  README.md
crates/irys_cli/: Cargo.toml
crates/irys_cli/src/: main.rs
crates/irys_editor/: Cargo.toml
crates/irys_editor/src/: app_state.rs  main.rs  main_egui.rs
crates/irys_forms/src/: control.rs  events.rs
crates/irys_parser/: Cargo.toml
crates/irys_runtime/: Cargo.toml
crates/irys_ui/: Cargo.toml
examples/Dialogs/: Form1.frm
examples/TicTacToe/: Form1.Designer.vb  Form1.vb  TicTacToe.vbproj
examples/TodoList/: Form1.Designer.vb  Form1.vb  TodoList.vbproj  TodoList.vbproj copy
examples/calc/: Form1.frm
examples/classdemo/: Code1.bas  Form1.frm  classdemo.vbp
examples/kitchen_sink/: KitchenSinkForm.Designer.vb  KitchenSinkForm.vb  kitchen_sink.Designer.vb  kitchen_sink.vbproj
examples/sample_project/: hello_world.vb
examples/sqlite_binding/: Form1.Designer.vb  Form1.vb  README.md  SqliteBinding.vbproj
examples/submain/: Module1.vb  README.md  SubMain.vbproj  SubMainExample.vbproj
examples/threads_processes/: Module1.bas  README.md  ThreadsProcesses.vbp  ThreadsProcesses.vbproj
examples/tictactoeconsole/: Program.vb  README.md  tictactoe.vbproj
tests/: test_collections_controls.vb  test_crypto.vb  test_data_access.vb  test_data_access_full.vb  test_data_debug.vb  test_generic_collections.vb  test_inheritance.vb  test_lambda.vb  test_misc_gaps.vb  test_namespaces_full.vb  test_simple.vb  test_standalone.vb  test_string_escapes.vb  test_system_features.vb  test_threading.vb  test_using.vb  test_xml.vb
(+76 files in other folders)
