[workspace]
resolver = "2"
members = [
    "crates/irys_parser",
    "crates/irys_runtime",
    "crates/irys_forms",
    "crates/irys_editor",
    "crates/irys_project",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["irys Rust Team"]
license = "MIT"

[workspace.dependencies]
# Parser dependencies
pest = "2.7"
pest_derive = "2.7"

# GUI dependencies - egui for proper IDE support
eframe = "0.27"
egui = "0.27"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.10", features = ["serde", "v4"] }
thiserror = "1.0"

# Internal crates
irys_parser = { path = "crates/irys_parser" }
irys_runtime = { path = "crates/irys_runtime" }
irys_forms = { path = "crates/irys_forms" }
irys_project = { path = "crates/irys_project" }
